# size-optimization-rust-binaries

./: Cargo.toml  README.md  analyze-size.ps1  build-all.ps1  build-ultra.ps1  test-server.ps1
src/: main.rs
